Bug 83354 - REPORTBUILDER: Chart is truncated - moved down outside the margins of the object
Summary: REPORTBUILDER: Chart is truncated - moved down outside the margins of the object
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: high critical
Assignee: Not Assigned
URL:
Whiteboard: BSA target:4.5.0 target:4.3.6 target:...
Keywords: bibisected, bisected, regression
Depends on: 87430
Blocks:
  Show dependency treegraph
 
Reported: 2014-09-01 13:09 UTC by christian.carrouge
Modified: 2015-12-17 08:34 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
a simple example that shows the problem on the report since 4.3.0 (41.96 KB, application/vnd.sun.xml.base)
2014-09-03 07:31 UTC, christian.carrouge
Details
Doc that shows the difference in behavior of reportbuilder between 4.2.5 and 4.3.0 version (112.54 KB, application/vnd.oasis.opendocument.text)
2014-09-03 07:38 UTC, christian.carrouge
Details

Note You need to log in before you can comment on or make changes to this bug.
Description christian.carrouge 2014-09-01 13:09:51 UTC
From version 4.3.0 et 4.3.1, the graphs in the report (reportbuilder) are poorly positioned and truncated ???

The same graphs in the report are proprely viewed in version 4.2.5.

Can you tell me if a correction is?

Thank you in advance for your response.
Operating System: Windows XP
Version: 4.3.0.4 release
Last worked in: 4.2.5.2 release
Comment 1 Robert Großkopf 2014-09-02 17:39:04 UTC
Do you mean the charts or the shapes?
An attachment (screenshot and example-database) would be helpful.
I have tested LO 4.3.0.4 with a report with charts - no problem here.
My system: OpenSUSE 12.3 64bit rpm Linux.
Comment 2 christian.carrouge 2014-09-03 07:31:24 UTC
Created attachment 105663 [details]
a simple example that shows the problem on the report since 4.3.0
Comment 3 christian.carrouge 2014-09-03 07:38:25 UTC
Created attachment 105665 [details]
Doc that shows the difference in behavior of reportbuilder between 4.2.5 and 4.3.0 version
Comment 4 christian.carrouge 2014-09-03 08:06:56 UTC
(In reply to comment #1)
> Do you mean the charts or the shapes?
> An attachment (screenshot and example-database) would be helpful.
> I have tested LO 4.3.0.4 with a report with charts - no problem here.
> My system: OpenSUSE 12.3 64bit rpm Linux.

Further to you request, I put an attachement simple base and a document showing the different behavior of reportbuilder since 4.3.0 version of LibreOffice. The graph in 4.3.0 is truncated ...
Comment 5 Robert Großkopf 2014-09-03 18:40:02 UTC
I could confirm the chart in the report is truncated. It is also positioned further down as it must be.

Then I changed in the executed report to "Edit File" and marked the object. It's on the right place, but shows the chart at it's bottom. I changed in the properties of the object form "Type" to "Options" and clicked "OK". The chart changes to the right position.

This worked in all versions up to the last 4.2, fails with the first LO 4.3.0.0Alpha and all following versions. So I change the version to the first 4.3.

I have tested with OpenSUSE 12.3, 64bit rpm Linux.
Will change the title of the report a little bit for better understanding.
Comment 6 christian.carrouge 2014-09-30 13:48:47 UTC
Unfortunately, the defaut still exists in the version 4.3.2.

So from version 4.3.0 to version 4.3.2 can no longer use the chart in the report in Database. Chart is always troncated and poorly positioned.

My application, developed in version 4.2.5 is unusable since version 4.3.

Can I expect a correction in the next releases ? Thank you in advance for your answer.
Comment 7 Robert Großkopf 2014-09-30 17:09:48 UTC
> Unfortunately, the defaut still exists in the version 4.3.2.
> 
> So from version 4.3.0 to version 4.3.2 can no longer use the chart in the
> report in Database. Chart is always troncated and poorly positioned.
> 
> My application, developed in version 4.2.5 is unusable since version 4.3.

No, you could use 4.2.*, because 4.3.* isn't usable with your application.
> 
> Can I expect a correction in the next releases ? Thank you in advance for
> your answer.

Nobody had assigned himself to this bug. 
Could be the bug is reported for the wrong component. There is a bug for charts reported in BUG82824 for component Writer, which looks a little bit like this bug. Could also be it should be in the component Chart.
Comment 8 Matthew Francis 2014-12-09 08:46:39 UTC
Bibisect results from 43all:

commit 56a3b3c781fc2eb55f46641d89a866a91119a8a3
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Sun May 11 21:09:15 2014 +0000

    source-hash-21e6fd2b2dfdb806db320f699e434e6f2351a7b6
    
    commit 21e6fd2b2dfdb806db320f699e434e6f2351a7b6
    Author:     Caolán McNamara <caolanm@redhat.com>
    AuthorDate: Thu Mar 6 11:42:47 2014 +0000
    Commit:     Caolán McNamara <caolanm@redhat.com>
    CommitDate: Thu Mar 6 16:35:44 2014 +0000
    
        coverity#1190350 Dereference after null check
    
        Change-Id: Ia863c587b998270f68e6a6439891ce18a07ed626

# bad: [423a84c4f7068853974887d98442bc2a2d0cc91b] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
# good: [752769ad0d2179e17ea0a08cc9004df7b890305b] source-hash-60c64b437c6678dd1d3fa3a6fc2b7da0480890d4
git bisect start 'latest' 'last42onmaster'
# good: [4fcd68ce4979f85fda4568f4b419a4b41d07345f] source-hash-2c4621c87ed3a7b19de195c21494c9a381e72b2e
git bisect good 4fcd68ce4979f85fda4568f4b419a4b41d07345f
# skip: [422186458e0b4db00c7e26b54d5b631f83bcad2a] source-hash-6948bf58ce181b17f60ef81f10205ef4dac50cc6
git bisect skip 422186458e0b4db00c7e26b54d5b631f83bcad2a
# bad: [a0b33bffff9c787dce71a13b344f06ae1453026b] source-hash-02e0be069e57e724c51f23e2e31b77657a6a1d3d
git bisect bad a0b33bffff9c787dce71a13b344f06ae1453026b
# bad: [db29eee512d03b1dc0139b3752bbe7931b165377] source-hash-77b6c1602aaa0bd059077765e7fabb53d9e6ddeb
git bisect bad db29eee512d03b1dc0139b3752bbe7931b165377
# bad: [0b79394752f7ecbab6ab4ecedbfab8551c6e9fbd] source-hash-381613916d42a1e18e2824b5d41028dcfe19659a
git bisect bad 0b79394752f7ecbab6ab4ecedbfab8551c6e9fbd
# good: [7c18060e3625d89e7ca6c3a75b0f609200150252] source-hash-2589d9e3e6e9fab18ff735561991a3dcdd3d8b4b
git bisect good 7c18060e3625d89e7ca6c3a75b0f609200150252
# good: [2f040759edbb7bb8e7a41cf06bac2a2a0fb50c73] source-hash-76fe205d7e0fe0a73616453209d8094cab9ce79f
git bisect good 2f040759edbb7bb8e7a41cf06bac2a2a0fb50c73
# bad: [a03a074d7d24b285022244e1939b1abbedc76d1e] source-hash-c84f0dae40b6f3e64a265efcc76b1757edbdbf45
git bisect bad a03a074d7d24b285022244e1939b1abbedc76d1e
# bad: [56a3b3c781fc2eb55f46641d89a866a91119a8a3] source-hash-21e6fd2b2dfdb806db320f699e434e6f2351a7b6
git bisect bad 56a3b3c781fc2eb55f46641d89a866a91119a8a3
# first bad commit: [56a3b3c781fc2eb55f46641d89a866a91119a8a3] source-hash-21e6fd2b2dfdb806db320f699e434e6f2351a7b6
Comment 9 Matthew Francis 2014-12-09 10:17:49 UTC
A follow-up plain bisect over the bibisect range points to the following commit:

commit cb19042f4395c97d123a27c6960d5e30d666c010
Author: Zolnai Tamás <tamas.zolnai@collabora.com>
Date:   Wed Mar 5 22:15:09 2014 +0100

    New feature: vertical alignment for text frames: Layout part
    
    - Introduce a new attribute (content position) for fly frames. Content
    position specify the top-left corner of the content area (where
    frame content can be placed). Add methods and members for invalidation.
    - Extract content's height calculation from SwFlyFrm::Format()
    to a funtction so we can use this inside SwFlyFrm::MakeContentPos.
    
    Change-Id: I64abb70afb652ad5c11aa69b5ba12a85210e215
Comment 10 Alex Thurgood 2015-01-03 17:40:01 UTC
Adding self to CC if not already on
Comment 11 Commit Notification 2015-01-07 00:57:34 UTC
Zolnai Tamás committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=89a81a6610cf316666291750e7300bcd1a97d062

fdo#83354: Chart is truncated - moved down outside the margins of the object

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2015-01-07 10:08:10 UTC
Zolnai Tamás committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=32dce67106c9f6ddbb91daf4dd84308974ebe309&h=libreoffice-4-3

fdo#83354: Chart is truncated - moved down outside the margins of the object

It will be available in 4.3.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2015-01-07 13:22:41 UTC
Zolnai Tamás committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6d62f6484c0ecb4a09332ad442f5cc53e6da9401&h=libreoffice-4-4

fdo#83354: Chart is truncated - moved down outside the margins of the object

It will be available in 4.4.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 christian.carrouge 2015-01-31 09:20:39 UTC
I just downloaded release 4.4.0.3 whether the error was corrected. But it is worst it is impossible to make a report in Base ?

It is very surprising I'm on Windows 7. Am I the only onu  having this problem?
Comment 15 Pascal S 2015-01-31 10:54:28 UTC
Didn't try to create a new report, but opening or editing a report created with a previous version seems also impossible. Even worst, Libreoffice does not respond any more when I try to open one of these reports. Tested on Windows 7.
Comment 16 Alex Thurgood 2015-01-31 14:27:55 UTC
(In reply to Pascal S from comment #15)
> Didn't try to create a new report, but opening or editing a report created
> with a previous version seems also impossible. Even worst, Libreoffice does
> not respond any more when I try to open one of these reports. Tested on
> Windows 7.

That behaviour seems to be bug 88824
Comment 17 Buovjaga 2015-02-01 11:35:38 UTC
Well, WONTFIX is the wrong status in any case.
Comment 18 christian.carrouge 2015-02-09 10:43:03 UTC
it is OK for me under Windows 7 since version 4.4.1.0.0+
Thank you to the developers.
Comment 19 Robinson Tryon (qubit) 2015-12-17 08:34:24 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]