fdo#83354: Chart is truncated - moved down outside the margins of the object

Handle the case when the content height is unitialized (0).
When content height is 0 it means there is no content (so
we don't need to calculate adjustment) or the content height is
uninitialized which leads to wrong calculated value.

Regression from:
cb19042f4395c97d123a27c6960d5e30d666c010

Change-Id: I45570a71f0597847820ce77e8dcec4a5b0c6785d
(cherry picked from commit 89a81a6610cf316666291750e7300bcd1a97d062)